# AnomalyDetection-MultivariateTimeSeries

./: README.md  __main__.py  configMaker.py  configur.ini  dataset.py  main.py  model.py  pyproject.toml  wrapper.py
AnomalyDetectPackage/: __init__.py  anomaly_detect.py  configMaker.py  dataset.py  main.py  model.py  wrapper.py
AnomalyDetectPackage/datasets/: __init__.py  dataset.py
AnomalyDetectPackage/models/: model.py
