[tool.poetry]
name = "anomaly-detect"
version = "0.0.1"
description = "Detects anomalies in a multivariate time series"
authors = ["Krishan Vinod Nair <krishanvnair2001@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "anomaly_detect"}]

[tool.poetry.dependencies]
python = "3.10.11"
tensorflow = "^2.13.0"
numpy = "^1.25.1"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
PyYAML = "^6.0.1"
matplotlib = "^3.7.2"
keras = "^2.13.1"
configparser = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
