[tool.poetry]
name = "anomaly-detect"
version = "0.0.1"
description = "Detects anomalies in a multivariate time series"
authors = ["Krishan Vinod Nair <krishanvnair2001@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "anomaly_detect"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tensorflow = "2.12.0"
numpy = "1.23.5"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
PyYAML = "^6.0.1"
matplotlib = "^3.7.2"
keras = "2.12"
configparser = "^6.0.0"
tensorflow-io-gcs-filesystem = "0.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
